# vikram

./: .env.example  .gitignore  .golangci.yml  .goreleaser.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  assets_embed.go  go.mod  go.sum  install.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_vulnerability.yml
archive/: README.md
config/: config.example.json
contrib/: com.levik.team.plist  com.vikram.team.plist  install-daemon.sh
research/: README.md  SOURCE_POLICY.md  STUDY_LIST.md
scripts/: release_check.sh
services/orchestrator/: README.md  pyproject.toml
services/orchestrator/src/levik_orchestrator/: __init__.py  host_client.py  main.py  models.py  policy.py  server.py  settings.py  store.py  workflow.py
services/orchestrator/src/levik_orchestrator/console/: index.html
services/orchestrator/src/levik_orchestrator/console/static/: founder-console.css
services/orchestrator/src/vikram_orchestrator/: __init__.py  host_client.py  models.py  server.py  settings.py  team.py  workflow.py
services/orchestrator/src/vikram_orchestrator/console/: index.html
services/orchestrator/src/vikram_orchestrator/console/static/: founder-console.js
services/orchestrator/tests/: test_host_client.py  test_store.py  test_team.py  test_workflow.py
web/: index.html  package-lock.json  package.json  tsconfig.json
workspace/: AGENT.md  IDENTITY.md  TOOLS.md  USER.md
(+201 files in other folders)
