[project]
name = "vikram-orchestrator"
version = "0.1.0"
description = "Python orchestration service for Vikram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.136.1",
  "httpx==0.28.1",
  "langgraph==1.1.9",
  "langgraph-checkpoint-sqlite==3.0.3",
  "pydantic==2.13.3",
  "pydantic-settings==2.14.2",
  "uvicorn==0.46.0",
]

[project.scripts]
vikram-orchestrator = "vikram_orchestrator.main:main"

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vikram_orchestrator = ["console/index.html", "console/static/*"]
